--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 
-<div id="impress" data-transition-duration="1000">
+<div id="impress" data-transition-duration="750">
 
     <div class="step slide" id="title" data-x="0" data-y="0" data-scale="2">
         <h4><strong>2017-03-06</strong> | <a class="green" href="http://www.rg.mpg.de/">Max Planck Institute for European Legal History, Frankfurt/M.</a></h4>
@@ -288,6 +288,10 @@
             <div style="visibility:hidden;text-align:center;position:absolute;top:30%;">
                 <img src="resources/img/collation_3_lera.png" style="display:block;margin:auto;width:700px;">
             </div>
+            <div width="100%" class="centered" style="clear:both;font-size:14px;">
+                Version Variation Visualization: &lt;<a class="green" href="http://www.delightedbeauty.org/vvv/">http://www.delightedbeauty.org/vvv/</a>&gt;<br>
+                <span style="visibility:hidden">Lera: &lt; <a class="green" href="http://lera.uzi.uni-halle.de/editions/1/edit">http://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
+            </div>
         </main>
     </div>
 
@@ -316,8 +320,9 @@
             <div style="float: right;" width="50%">
                 <img src="resources/img/collation_2_vvv_eddi_values.png" style="width:500px;">
             </div>
-            <div style="visibility:hidden;text-align:center;position:absolute;top:30%;">
-                <img src="resources/img/collation_3_lera.png" style="display:block;margin:auto;width:700px;">
+            <div width="100%" class="centered" style="clear:both;font-size:14px;">
+                Version Variation Visualization: &lt;<a class="green" href="http://www.delightedbeauty.org/vvv/">http://www.delightedbeauty.org/vvv/</a>&gt;<br>
+                <span style="visibility:hidden">Lera: &lt; <a class="green" href="http://lera.uzi.uni-halle.de/editions/1/edit">http://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
             </div>
         </main>
     </div>
@@ -336,6 +341,10 @@
                 <img src="resources/img/collation_2_vvv_eddi_values.png" style="width:500px;">
             </div>
             <img src="resources/img/collation_3_lera.png" style="position:absolute;top:30%;left:200px;display:block;margin:auto;width:700px;">
+            <div width="100%" class="centered" style="clear:both;font-size:14px;">
+                Version Variation Visualization: &lt;<a class="green" href="http://www.delightedbeauty.org/vvv/">http://www.delightedbeauty.org/vvv/</a>&gt;<br>
+                <span style="position:relative;top:30px;">Lera: &lt;<a class="green" href="http://lera.uzi.uni-halle.de/editions/1/edit">http://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
+            </div>
         </main>
     </div>
 
@@ -376,6 +385,9 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
+            <div width="100%" class="centered" style="clear:both;font-size:14px;">
+                DiaCollo: &lt;<a class="green" href="http://kaskade.dwds.de/dstar/dta+dwds/diacollo/?query=Konstitution&_s=submit&date=&slice=10&score=ld&kbest=20&cutoff=&profile=2&format=cloud&groupby=">http://kaskade.dwds.de/dstar/dta+dwds/diacollo/</a>&gt;
+            </div>
         </main>
     </div>
 
@@ -387,7 +399,9 @@
         <main>
             <h2>Geomapping</h2>
             <div>
-                <img src="resources/img/pelagios_praunheimer_lager.png" style="vertical-align:top;width:800px;">
+                <img src="resources/img/pelagios_praunheimer_lager.png" style="vertical-align:top;width:800px;"><br>
+                <span style="font-size:14px;">Pelagios: &lt;<a class="green" href="http://pelagios.org/peripleo/map#at=50.15797900674531,8.571395874023438,11&layer=dare&ex=true&places=http%3A%2F%2Fdare.ht.lu.se%2Fplaces%2F38618">http://pelagios.org/peripleo/map</a>&gt;</span>
+                <div style="text-align:right;font-size:14px;position:absolute;top:20%;left:70%;">Ecartico: &lt;<a class="green" href="http://www.vondel.humanities.uva.nl/ecartico/analysis/?task=numbersmap">http://www.vondel.humanities.uva.nl/ecartico</a>&gt;</div>
                 <img src="resources/img/ecartico.png" style="position:absolute;top:30%;left:44%;width:600px;">
             </div>
         </main>
@@ -432,6 +446,22 @@
                 </dd>
             </dl>
 
+        </main>
+    </div>
+
+    <div class="step slide" id="data_analysis_querying_demo">
+        <header>
+            <h1>Data Analysis</h1>
+            <h2>Examples (5)</h2>
+        </header>
+        <main>
+            <h2>Graph Query Demo</h2>
+            <ul>
+                <li>Histograph: &lt;<a class="green" href="http://histograph.cvce.eu/#/projection/person/person?from=2000-12-23&to=2012-09-02">http://histograph.cvce.eu/</a>&gt;</li>
+                <li>Provisualizer:<br>
+                    &lt;<a class="green" href="https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer#soil">https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer</a>&gt;</li>
+                <li>Neo4J: &lt;<a class="green" href="https://10-0-1-159-33127.neo4jsandbox.com/browser/">https://neo4j.com/sandbox-v2/#</a>&gt;</li>
+            </ul>
         </main>
     </div>
 
