URL on opening slide inserted.

--- a/index.html
+++ b/index.html
@@ -71,23 +71,20 @@
 <div id="impress" data-transition-duration="750">
 
     <div class="step slide" id="title" data-x="0" data-y="0" data-scale="2">
-        <h4><strong>2017-03-06</strong> | <a class="green" href="http://www.rg.mpg.de/">Max Planck Institute for European Legal History, Frankfurt/M.</a></h4>
+        <h4><strong>2017-03-06</strong> | <a class="green" href="https://www.rg.mpg.de/">Max Planck Institute for European Legal History, Frankfurt/M.</a></h4>
         <h4><strong>Plenary Assembly</strong></h4>
 
         <h1 class="down-100">DH @ MPIeR</h1>
 
         <h2 class="red up-25">Digital Humanities offerings at the Institute</h2>
 
-    <!--
         <h4 class="down-100">
             <strong>Slides:</strong>
-            <a href="#" title="View the presentation online">
-                Link
-            </a>
+            <a href="https://awagner-mainz.github.io/dh-mpier-2017-03" title="View the presentation online">https://awagner-mainz.github.io/dh-mpier-2017-03</a>
         </h4>
-    -->
+
         <h5>
-            <strong><a class="green" href="http://www.rg.mpg.de/mitarbeiter/51578/712252">Andreas Wagner</a></strong> |
+            <strong><a class="green" href="https://www.rg.mpg.de/mitarbeiter/51578/712252">Andreas Wagner</a></strong> |
             <img src="resources/img/twitter_bird_logo_2012.svg" alt="Twitter" class="twitter-icon" />
                 <a class="green" href="https://twitter.com/anwagnerdreas" title="Andreas Wagner on Twitter">@anwagnerdreas</a> |
             <img src="resources/img/octicons-mark-github.svg" alt="Twitter" class="gh-icon" />
@@ -290,7 +287,7 @@
             </div>
             <div width="100%" class="centered" style="clear:both;font-size:14px;">
                 Version Variation Visualization: &lt;<a class="green" href="http://www.delightedbeauty.org/vvv/">http://www.delightedbeauty.org/vvv/</a>&gt;<br>
-                <span style="visibility:hidden">Lera: &lt; <a class="green" href="http://lera.uzi.uni-halle.de/editions/1/edit">http://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
+                <span style="visibility:hidden">Lera: &lt; <a class="green" href="https://lera.uzi.uni-halle.de/editions/1/edit">https://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
             </div>
         </main>
     </div>
@@ -322,7 +319,7 @@
             </div>
             <div width="100%" class="centered" style="clear:both;font-size:14px;">
                 Version Variation Visualization: &lt;<a class="green" href="http://www.delightedbeauty.org/vvv/">http://www.delightedbeauty.org/vvv/</a>&gt;<br>
-                <span style="visibility:hidden">Lera: &lt; <a class="green" href="http://lera.uzi.uni-halle.de/editions/1/edit">http://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
+                <span style="visibility:hidden">Lera: &lt; <a class="green" href="https://lera.uzi.uni-halle.de/editions/1/edit">https://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
             </div>
         </main>
     </div>
@@ -343,7 +340,7 @@
             <img src="resources/img/collation_3_lera.png" style="position:absolute;top:30%;left:200px;display:block;margin:auto;width:700px;">
             <div width="100%" class="centered" style="clear:both;font-size:14px;">
                 Version Variation Visualization: &lt;<a class="green" href="http://www.delightedbeauty.org/vvv/">http://www.delightedbeauty.org/vvv/</a>&gt;<br>
-                <span style="position:relative;top:30px;">Lera: &lt;<a class="green" href="http://lera.uzi.uni-halle.de/editions/1/edit">http://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
+                <span style="position:relative;top:30px;">Lera: &lt;<a class="green" href="https://lera.uzi.uni-halle.de/editions/1/edit">https://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</span>
             </div>
         </main>
     </div>
@@ -386,7 +383,7 @@
                 </video>
             </div>
             <div width="100%" class="centered" style="clear:both;font-size:14px;">
-                DiaCollo: &lt;<a class="green" href="http://kaskade.dwds.de/dstar/dta+dwds/diacollo/?query=Konstitution&_s=submit&date=&slice=10&score=ld&kbest=20&cutoff=&profile=2&format=cloud&groupby=">http://kaskade.dwds.de/dstar/dta+dwds/diacollo/</a>&gt;
+                DiaCollo: &lt;<a class="green" href="https://kaskade.dwds.de/dstar/dta/diacollo/?query=Konstitution&_s=submit&date=&slice=10&score=ld&kbest=10&cutoff=&profile=2&format=cloud&groupby=&eps=0">https://kaskade.dwds.de/dstar/dta/diacollo/</a>&gt;
             </div>
         </main>
     </div>
@@ -579,7 +576,7 @@
             <h5>If you have an idea or a question:&nbsp;&nbsp;&nbsp;Please get in touch!</h5>
 
             <h5>
-                <a class="green" href="http://www.rg.mpg.de/mitarbeiter/51578/712252"><strong>Andreas Wagner</strong></a> |
+                <a class="green" href="https://www.rg.mpg.de/mitarbeiter/51578/712252"><strong>Andreas Wagner</strong></a> |
                 <strong>B 308</strong> | <strong>Tel: -107</strong> | (Except Thursdays)<br>
                 <a class="green" href="mailto:wagner@rg.mpg.de" title="Andreas Wagner on E-Mail">wagner@rg.mpg.de</a> |
                 <img src="resources/img/twitter_bird_logo_2012.svg" alt="Twitter" class="twitter-icon" />
