Updated sources, added reference slide, one image.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <tr>
                     <td width="50%">
                         Lists/Tables<br>
-                        <img src="resources/img/lists.png" height="200">
+                        <img src="resources/img/lists+tables.svg" height="200">
                     </td>
                     <td>
                         Linked Tables<br>
@@ -360,11 +360,20 @@
         <main>
             <h2>Text Re-Use Detection</h2>
             <div width="100%">
-                <img src="resources/img/reuse_1.png" style="width:670px;margin-bottom:35px;">
+                <img style="float:left;" src="resources/img/reuse_1.png" style="width:670px;margin-bottom:35px;">
+                <span style="margin-left:-50px;font-size:12px;">Source: <a href="http://tuprints.ulb.tu-darmstadt.de/4342/" class="green">urn:nbn:de:tuda-tuprints-43429</a></span>
             </div>
             <div>
-                <img src="resources/img/reuse_2.jpg" style="vertical-align:top;width:450px;">
-                <img src="resources/img/reuse_3.png" style="position:absolute;top:270px;width:600px;">
+                <div style="vertical-align:top;position:relative;top:10px;width:450px;">
+                    <img src="resources/img/reuse_2.jpg">
+                    <br/>
+                    <span style="font-size:12px;margin-left:50px;position:relative;top:-15px;">Source: <a href="https://dx.doi.org/10.1073%2Fpnas.1415135111" class="green">doi:10.1073/pnas.1415135111</a></span>
+                </div>
+                <div  style="position:absolute;left:450px;top:270px;width:600px;">
+                    <img src="resources/img/reuse_3.png">
+                    <br/>
+                    <span style="font-size:12px;margin-left:50px;position:relative;top:-20px;">Source: &lt;<a href="http://demo.fragmentarytexts.org/en/istros/digital-edition/digital-edition-exploring-text-re-uses-across-languages.html" class="green">https://demo.fragmentarytexts.org</a>&gt;</span>
+                </div>
             </div>
         </main>
     </div>
@@ -398,8 +407,8 @@
             <div>
                 <img src="resources/img/pelagios_praunheimer_lager.png" style="vertical-align:top;width:800px;"><br>
                 <span style="font-size:14px;">Pelagios: &lt;<a class="green" href="http://pelagios.org/peripleo/map#at=50.15797900674531,8.571395874023438,11&layer=dare&ex=true&places=http%3A%2F%2Fdare.ht.lu.se%2Fplaces%2F38618">http://pelagios.org/peripleo/map</a>&gt;</span>
-                <div style="text-align:right;font-size:14px;position:absolute;top:20%;left:70%;">Ecartico: &lt;<a class="green" href="http://www.vondel.humanities.uva.nl/ecartico/analysis/?task=numbersmap">http://www.vondel.humanities.uva.nl/ecartico</a>&gt;</div>
-                <img src="resources/img/ecartico.png" style="position:absolute;top:30%;left:44%;width:600px;">
+                <img src="resources/img/ecartico.png" style="position:absolute;top:25%;left:44%;width:600px;">
+                <div style="text-align:right;font-size:14px;">Ecartico: &lt;<a class="green" href="http://www.vondel.humanities.uva.nl/ecartico/analysis/?task=numbersmap">http://www.vondel.humanities.uva.nl/ecartico</a>&gt;</div>
             </div>
         </main>
     </div>
@@ -454,10 +463,9 @@
         <main>
             <h2>Graph Query Demo</h2>
             <ul>
-                <li>Histograph: &lt;<a class="green" href="http://histograph.cvce.eu/#/projection/person/person?from=2000-12-23&to=2012-09-02">http://histograph.cvce.eu/</a>&gt;</li>
-                <li>Provisualizer:<br>
-                    &lt;<a class="green" href="https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer#soil">https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer</a>&gt;</li>
-                <li>Neo4J: &lt;<a class="green" href="https://10-0-1-159-33127.neo4jsandbox.com/browser/">https://neo4j.com/sandbox-v2/#</a>&gt;</li>
+                <li>Histograph <span style="font-size:20px;">&lt;<a class="green" href="http://histograph.cvce.eu/#/projection/person/person?from=2000-12-23&to=2012-09-02">http://histograph.cvce.eu/</a>&gt;</span></li>
+                <li>Provisualizer <span style="font-size:20px;">&lt;<a class="green" href="https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer#soil">https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer</a>&gt;</span></li>
+                <li>Neo4J <span style="font-size:20px;">&lt;<a class="green" href="https://10-0-1-159-33127.neo4jsandbox.com/browser/">https://neo4j.com/sandbox-v2/#</a>&gt;</span></li>
             </ul>
         </main>
     </div>
@@ -585,6 +593,39 @@
         </main>
     </div>
 
+    <div class="step slide" id="references" data-rel-x="1000" data-rel-y="0">
+        <header>
+            <h2>References</h2>
+        </header>
+        <main>
+            <h3>References</h3>
+            <ul style="font-size:18px;" >
+                <li><a class="green" href="http://www.delightedbeauty.org/vvv/">Version Variation Visualization</a></li>
+                <li><a class="green" href="https://lera.uzi.uni-halle.de/editions/1/edit">Lera</a></li>
+                <li>Bär, Daniel; Zesch, Torsten; Gurevych, Iryna: Composing Measures for Computing Text Similarity. Darmstadt, 2015.<br/>
+                    <a href="http://tuprints.ulb.tu-darmstadt.de/4342/" class="green">urn:nbn:de:tuda-tuprints-43429</a>.</li>
+                <li>Citron, Daniel T; Ginsparg, Paul: Patterns of text reuse in a scientific corpus. <i>Proc Natl Acad Sci USA</i> Vol. 112, No. 1 (2015): pp. 25–30.<br/>
+                    <a href="https://dx.doi.org/10.1073%2Fpnas.1415135111" class="green">doi:10.1073/pnas.1415135111</a>.</li>
+                <li>Berti, Moica et al.: <a href="http://demo.fragmentarytexts.org/en/istros/digital-edition/digital-edition-exploring-text-re-uses-across-languages.html" class="green">https://demo.fragmentarytexts.org</a>.</li>
+                <li>Jurish, Bryan: <a class="green" href="https://kaskade.dwds.de/dstar/dta/diacollo/">DiaCollo</a> (see <a class="green" href="https://kaskade.dwds.de/diacollo-tutorial/">tutorial</a>).</li>
+                <li><a class="green" href="http://pelagios.org/peripleo/map">Pelagios/Peripleo</a></li>
+                <li><a class="green" href="http://www.vondel.humanities.uva.nl/ecartico/analysis/?task=numbersmap">Ecartico</a></li>
+                <li><a class="green" href="http://histograph.cvce.eu/">Histograph</a></li>
+                <li><a class="green" href="https://www.prov.vic.gov.au/explore-collection/where-start/provisualizer#soil">Provisualizer</a></li>
+                <li><a class="green" href="https://neo4j.com/">Neo4J</a></li>
+                <li>Wilkinson, Mark D. et al.: The FAIR Guiding Principles for scientific data management and stewardship. Sci. Data 3:160018 (2016)<br/>
+                    <a class="green" href="https://dx.doi.org/doi:10.1038/sdata.2016.18">doi:10.1038/sdata.2016.18</a>.</li>
+            </ul>
+            <h3>More information on our wiki</h3>
+            <ul style="font-size:18px;" >
+                <li><a class="green" href="http://ig-dighum.wiki.gwdg.de/">http://ig-dighum.wiki.gwdg.de/</a></li>
+            </ul>
+            <h3>Presentation made using</h3>
+            <ul style="font-size:18px;" >
+                <li><a class="green" href="https://github.com/impress/impress.js">impress.js</a></li>
+            </ul>
+        </main>
+    </div>
 
     <div id="overview" class="step" data-rel-x="-10000" data-y="0" data-scale="4" style="pointer-events: none;">
     </div>
