Update github pages url.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <h4 class="down-100">
             <strong>Slides:</strong>
-            <a href="https://awagner-mainz.github.io/dh-mpier-2017-03" title="View the presentation online">https://awagner-mainz.github.io/dh-mpier-2017-03</a>
+            <a href="https://rg-mpg-de.github.io/dh-mpier-berlin-2018-06" title="View the presentation online">https://rg-mpg-de.github.io/dh-mpier-berlin-2018-06</a>
         </h4>
 
         <h5>
